# suika-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
.github/workflows/: rust.yml
src/: main.rs  suika.rs
src/jobs/: scrape.rs
src/suika/: product.rs
src/suika/job/: scrape.rs
suika/: .env.example  Cargo.toml
suika/migrations/2020-05-09-164306_create_products/: down.sql  up.sql
suika/src/: main.rs  schema.rs  suika.rs
suika/src/suika/: api.rs  models.rs  product.rs
suika/src/suika/job/: scrape.rs
