[package]
name = "bweer"
version = "0.1.0"
authors = ["mari"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["json"] }
tokio = { version = "0.2.20", features = ["full"] }
serde_json = "1.0.52"
