[package]
name = "suika"
version = "0.1.0"
authors = ["mari"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["json"] }
tokio = { version = "0.2.20", features = ["full"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
serde_with = { version = "1.4.0", features = ["json"] }
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["postgres"] }
rocket = "0.4.4"
